--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+.card {
+    text-align: center;
+    margin: 10px 10px;
+}
+
+ul, li {
+    list-style: none;
+    text-align: center;
+}
