--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,8 +4,9 @@
   </div>
   <div id="navbar" class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
+      <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/projects">Projects</a></li>
-      <li><a routerLink="/crud">Edit</a></li>
+      
     </ul>
   </div>
 </nav>
