--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,6 +6,7 @@
     <ul class="nav navbar-nav">
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/projects">Projects</a></li>
+      <li><a routerLink="/admin">Login</a></li>
       
     </ul>
   </div>
