--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,13 @@
 li {
     margin: 0 10px;
 }
+
+.navLink {
+    color: rgb(58, 126, 242)!important;
+}
+.navLink:hover {
+    color: rgb(115, 165, 250)!important;
+    cursor: pointer;
+    text-shadow: 0 0 12px rgb(255, 255, 255);
+    text-decoration: none!important;
+}
