--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,13 +1,50 @@
 li {
     margin: 0 10px;
+    display: inline-block;
+    text-decoration: none!important;
+
 }
 
-.navLink {
+.navLink, .navLinkLog, .navLinkAdmin {
     color: rgb(58, 126, 242)!important;
 }
-.navLink:hover {
+.navLink:hover,.navLinkLog:hover {
     color: rgb(115, 165, 250)!important;
     cursor: pointer;
     text-shadow: 0 0 12px rgb(255, 255, 255);
     text-decoration: none!important;
 }
+a:hover {
+    text-decoration: none;
+    color: rgb(115, 165, 250)!important;
+
+}
+.navLinkAdmin:hover {
+    color: rgb(115, 165, 250)!important;
+    cursor: pointer;
+    text-shadow: 0 0 12px rgb(255, 255, 255);
+    text-decoration: none!important;
+}
+
+.navLinkLog, .navLinkAdmin {
+    margin: left auto;
+    display: inline-block;
+    cursor: pointer;
+}
+footer {
+    
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+    padding: 15px;
+  }
+
+  #logOut {
+    color: rgb(145, 92, 0)
+  }
+  #logOut:hover {
+    cursor: pointer;
+    color: rgb(255, 178, 44)!important;
+  }
