--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,28 +2,24 @@
   <div class="navbar-header">
     <a class="navbar-brand logo" href="/">{{ title }}</a>
   </div>
-  <div id="navbar" class="collapse navbar-collapse">
+  <div  class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
       <li ><a class="navLink" routerLink="/">Home</a></li>
       <li  ><a class="navLink" routerLink="/projects">Projects</a></li>
+      <li  ><a class="navLink" (click)="charityFilter()" routerLink="/charity">Charities</a></li>
+      <li  ><a class="navLink" (click)="ideaFilter()" routerLink="/idea">Ideas</a></li>
+      <li  ><a class="navLink" (click)="productFilter()" routerLink="/product">Products</a></li>
       <div *ngIf="LoggedOut">
         <li>
-          <a class="navLink" (click)="login()">Login</a>
+          <a class="navLinkLog" (click)="login()">Login</a>
         </li>
       </div>
-      <div *ngIf="LoggedIn">
-        <li class="navLink">
-          <a  (click)="logout()">Logout</a>
-        </li>
-      </div>
-      <div *ngIf="admin">
-        <li class="navLink">
-          <a routerLink="/admin">Admin</a>
-        </li>
-      </div>
-
-      
-      
     </ul>
   </div>
 </nav>
+<div *ngIf="LoggedIn">
+<footer>
+    <a  id="logOut" (click)="logout()">Logout</a>
+    <a routerLink="/admin">Admin</a>
+</footer>
+</div>
