--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,10 @@
-<h1>Defund those crowds</h1>
+<div class="card">
+    <div class="card-title">
+            <h1>DefundMe</h1>
+    </div>
+    <div class="card-body">
+        <div *ngFor="let project of projects; let i=index">
+            <div *ngIf="i<3"><h1>{{project.title}}</h1></div>
+        </div>
+    </div>
+</div>
